--- a/ShooterGame/ShooterGame/ShooterGame.csproj
+++ b/ShooterGame/ShooterGame/ShooterGame.csproj
@@ -3,7 +3,58 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>net6.0</TargetFramework>
+    <StartupObject>ShooterGame.Program</StartupObject>
   </PropertyGroup>
+
+  <ItemGroup>
+    <None Remove="Content\SplashScreen\Eye\Eye_0.png" />
+    <None Remove="Content\SplashScreen\Eye\Eye_1.png" />
+    <None Remove="Content\SplashScreen\Eye\Eye_10.png" />
+    <None Remove="Content\SplashScreen\Eye\Eye_2.png" />
+    <None Remove="Content\SplashScreen\Eye\Eye_3.png" />
+    <None Remove="Content\SplashScreen\Eye\Eye_4.png" />
+    <None Remove="Content\SplashScreen\Eye\Eye_5.png" />
+    <None Remove="Content\SplashScreen\Eye\Eye_6.png" />
+    <None Remove="Content\SplashScreen\Eye\Eye_7.png" />
+    <None Remove="Content\SplashScreen\Eye\Eye_8.png" />
+    <None Remove="Content\SplashScreen\Eye\Eye_9.png" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Include="Content\SplashScreen\Eye\Eye_0.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Content\SplashScreen\Eye\Eye_1.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Content\SplashScreen\Eye\Eye_10.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Content\SplashScreen\Eye\Eye_2.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Content\SplashScreen\Eye\Eye_3.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Content\SplashScreen\Eye\Eye_4.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Content\SplashScreen\Eye\Eye_5.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Content\SplashScreen\Eye\Eye_6.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Content\SplashScreen\Eye\Eye_7.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Content\SplashScreen\Eye\Eye_8.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Content\SplashScreen\Eye\Eye_9.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="AnySerializer" Version="1.1.46" />
